--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
- 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.1.0",
     "react-simple-code-editor": "^0.14.1",
-    "rehype-highlight": "^7.0.2"
+    "rehype-highlight": "^7.0.2",
+    "vite": "^6.1.0"        
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -29,7 +29,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "globals": "^15.14.0"
+   
   }
 }
